--- a/404.html
+++ b/404.html
@@ -21,4 +21,5 @@ layout: default
   <h1>404</h1>
   <p><strong>Page not found :(</strong></p>
   <p>The requested page could not be found.</p>
+  <p>I am sorry if this is an inconvenience to you, but quite frankly I don't care...</p>
 </div>
